# zypherpunk-hack

./: package-lock.json  package.json
apps/pay-with-zcash/: README.md
apps/pay-with-zcash/pwz-client/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/pay-with-zcash/pwz-client/public/: demo.html  pay-with-zcash.embed.js  zcash-widget.css  zcash-widget.js
apps/pay-with-zcash/pwz-client/src/: App.css  App.tsx  config.ts  index.css
apps/pay-with-zcash/pwz-server/: package-lock.json  package.json  tsconfig.json
apps/pay-with-zcash/pwz-server/public/: pay-with-zcash.embed.js
apps/pay-with-zcash/pwz-server/src/: config.ts  server.ts
apps/zcash-dev-sandbox/: .gitignore
apps/zcash-dev-sandbox/server/: docker-compose.yml  openapi.yaml  package.json
apps/zcash-dev-sandbox/server/public/: index.htm
apps/zcash-dev-sandbox/server/src/: config.ts  server.ts
apps/zcash-pczt/: package.json  tsconfig.json
apps/zcash-pczt/native/: Cargo.toml
apps/zcash-pczt/native/src/: lib.rs
apps/zcash-pczt/src/: index.ts  lib.rs  native-bridge.ts  types.ts
apps/zingo-cli-wrapper/: .gitignore  Dockerfile.node  README.md  docker-compose.yml  package.json
apps/zingo-cli-wrapper/.github/workflows/: ci.yml
apps/zingo-cli-wrapper/src/: app.ts  config.ts  server.ts
apps/zingo-cli-wrapper/src/cli/: cleanZingoOutput.ts  common.adapter.ts  spawn-cli.ts  wallet.adapter.ts
apps/zingo-cli-wrapper/src/services/: viewkey.service.ts  wallet-init.ts
apps/zingo-cli-wrapper/src/utils/: crypto.ts  dirExiastsNotEmpty.ts  (+4 more)
(+41 files in other folders)
