[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
name = "pczt_native"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
napi = { version = "2", features = ["tokio_rt", "serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pczt = "0.3.0" # pczt - Partially Created Zcash Transaction
zcash_primitives = "0.26.1"
